--- a/Savio/SavingPlanSetup/SASavingPlanViewController.xib
+++ b/Savio/SavingPlanSetup/SASavingPlanViewController.xib
@@ -1,13 +1,17 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <mutableArray key="gotham-rounded-book-2.otf">
+        <array key="gotham-rounded-book-2.otf">
             <string>GothamRounded-Book</string>
-        </mutableArray>
+        </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SASavingPlanViewController" customModule="Savio" customModuleProvider="target">
@@ -23,37 +27,37 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g2W-Wi-2Eu">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x7I-Oc-D2D">
-                            <rect key="frame" x="0.0" y="0.0" width="600" height="192"/>
-                            <color key="backgroundColor" red="0.63921570780000003" green="0.63529413940000001" blue="0.63921570780000003" alpha="1" colorSpace="deviceRGB"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="192"/>
+                            <color key="backgroundColor" red="0.5722275972366333" green="0.56778675317764282" blue="0.5723307728767395" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="192" id="8Rw-M4-dcW"/>
                             </constraints>
                         </view>
                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ohz-oo-qwT">
-                            <rect key="frame" x="0.0" y="0.0" width="600" height="192"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="192"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="192" id="hAM-Zq-DUq"/>
                             </constraints>
                         </imageView>
                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add a photo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M9o-cd-Fof">
-                            <rect key="frame" x="267" y="130" width="65" height="10"/>
+                            <rect key="frame" x="155" y="130" width="65" height="10"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="10" id="Exn-uf-WnG"/>
                                 <constraint firstAttribute="width" constant="65" id="NLk-7I-syd"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="10"/>
-                            <color key="textColor" red="0.21176470589999999" green="0.21960784310000001" blue="0.2666666667" alpha="1" colorSpace="deviceRGB"/>
+                            <color key="textColor" red="0.15996189415454865" green="0.16485004127025604" blue="0.20508554577827454" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ola-jz-tZL">
-                            <rect key="frame" x="274" y="71" width="51" height="50"/>
+                            <rect key="frame" x="162" y="71" width="51" height="50"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="50" id="faa-Xu-AFU"/>
                                 <constraint firstAttribute="width" constant="51" id="sGy-fv-Xeu"/>
@@ -64,8 +68,8 @@
                             </connections>
                         </button>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MUm-JV-X8Q">
-                            <rect key="frame" x="35" y="246" width="530" height="400"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <rect key="frame" x="35" y="246" width="305" height="400"/>
+                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="400" id="YPG-To-DdR"/>
                             </constraints>
@@ -75,7 +79,7 @@
                             </connections>
                         </tableView>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstItem="MUm-JV-X8Q" firstAttribute="leading" secondItem="g2W-Wi-2Eu" secondAttribute="leading" constant="35" id="0Ib-WT-4Ev"/>
                         <constraint firstItem="x7I-Oc-D2D" firstAttribute="leading" secondItem="g2W-Wi-2Eu" secondAttribute="leading" id="4uv-sM-vAW"/>
@@ -104,7 +108,7 @@
                     </connections>
                 </scrollView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="g2W-Wi-2Eu" secondAttribute="bottom" id="HlR-Vz-mhB"/>
                 <constraint firstItem="g2W-Wi-2Eu" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Zlb-qP-sHw"/>
@@ -115,6 +119,6 @@
         </view>
     </objects>
     <resources>
-        <image name="generic-camera.png" width="51" height="50"/>
+        <image name="generic-camera.png" width="50" height="50"/>
     </resources>
 </document>
