--- a/Savio/PaymentFlow/SAPaymentFlowViewController.xib
+++ b/Savio/PaymentFlow/SAPaymentFlowViewController.xib
@@ -83,12 +83,12 @@
                                         <outlet property="delegate" destination="-1" id="aVv-Ph-7t8"/>
                                     </connections>
                                 </textField>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ek4-qn-oyK">
-                                    <rect key="frame" x="30" y="190" width="315" height="21"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ek4-qn-oyK">
+                                    <rect key="frame" x="30" y="190" width="315" height="25"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="21" id="RRS-uK-cmV"/>
+                                        <constraint firstAttribute="height" constant="25" id="RRS-uK-cmV"/>
                                     </constraints>
-                                    <fontDescription key="fontDescription" name="GothamRounded-Light" family="Gotham Rounded" pointSize="13"/>
+                                    <fontDescription key="fontDescription" name="GothamRounded-Light" family="Gotham Rounded" pointSize="12"/>
                                     <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
